# FastAPI-Books-Backend

./: LICENSE  README.md  pyproject.toml
Lecture files/: lec2.py  lec3.py
SQL Scripts/: SQL-BOOKS-TESTING.sql  initial-postgres-setup.sql
migrations/: env.py
migrations/versions/: 5530921942f3_init.py  745d480d4e5d_change_name_users_to_user.py  993e04d6c882_add_password_to_user.py
src/: config.py
src/auth/: models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  main.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py
