[project]
name = "ssali-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "asyncpg>=0.31.0",
    "certifi==2026.1.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "fastapi==0.129.0",
    "fastapi-cli==0.0.21",
    "fastapi-cloud-cli==0.12.0",
    "fastar==0.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "nest-asyncio==1.6.0",
    "packaging==26.0",
    "parso==0.8.6",
    "passlib>=1.7.4",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rich==14.3.2",
    "rich-toolkit==0.19.4",
    "rignore==0.7.6",
    "sentry-sdk==2.52.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sqlmodel>=0.0.37",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typer==0.23.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websockets==16.0",
]
